[tool.poetry]
name = "nova pasta"
version = "0.1.0"
description = ""
authors = ["Anderson Rodrigues <eusouanderson@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pefile = "^2024.8.26"
psutil = "^6.1.0"
frida = "^16.5.6"
pyautogui = "^0.9.54"
kivy = "^2.3.0"
pynput = "^1.7.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
